# eToddlerShop-ServiceLayered

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  _consumer.py  order_notifier.py  product_notifier.py  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/models/: order.py  product.py  product_embedding.py  user.py
backend/app/routers/: ai.py  auth.py  health.py  orders.py  products.py  users.py
backend/app/schemas/: ai_schema.py  auth_schema.py  order_schema.py  product_schema.py  user_schema.py
backend/app/services/: ai_service.py  auth_service.py  orders_service.py  products_service.py  users_service.py
backend/app/services/ai/: _clients.py  chat_service.py  embedding_service.py  recommend_service.py  speech_service.py
backend/app/services/ai/orchestrator/: chat_orchestrator.py  history_repository.py
backend/app/services/auth/: auth_service.py  entra_token_validator.py
backend/app/services/email/: _base.py  email_sender.py  email_service.py  event_publisher.py  events.py  order_email_service.py
backend/app/services/orders/: orders_service.py
backend/app/services/products/: products_service.py
backend/app/services/users/: users_service.py
backend/tests/: conftest.py  test_api_products.py  test_auth_service.py
client/: .env.local.example  AGENTS.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: backend-best-practices.md  notes.md  (+3 more)
(+50 files in other folders)
