[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "openai>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.14.1",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "debugpy>=1.8.20",
    "azure-storage-blob>=12.29.0",
    "redis[asyncio]>=5.0.0",
]
